--- a/src/LocationBox.css
+++ b/src/LocationBox.css
@@ -1,8 +1,12 @@
 .LocationBox {
     border-radius: 2rem;
-    background-color: lightgray;
+    background-color: rgb(230, 230, 230);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 1rem;
+}
+
+.LocationBox:hover {
+    background-color: rgb(235, 235, 235);
 }
