added settings modal and improved home and details page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 .App {
   text-align: center;
   height: 100vh;
+  font-family: "Inter";
+}
+
+.AppDesktop {
+  font-size: 20px;
+}
+
+.AppMobile {
+  font-size: 13.33px;
+}
+
+html {
+  background-color: #DADADA;
 }
