--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,8 @@
 .Home {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+    max-height: calc(100vh - 56px);
 }
 
 .HomeCenter {
