--- a/src/LocationBox.css
+++ b/src/LocationBox.css
@@ -1,12 +1,46 @@
 .LocationBox {
-    border-radius: 2rem;
-    background-color: rgb(230, 230, 230);
+    border-radius: 2em 1.5em 1.5em 2em;
+    background-color: #748CF1;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 1rem;
+    color: white;
+    margin: 1em;
 }
 
 .LocationBox:hover {
-    background-color: rgb(235, 235, 235);
+    background-color: #5B77EB;
+    animation-duration: 2s;
+    animation-name: hover-box;
 }
+
+.LocationBoxLeft {
+    background-color: white;
+    border-radius: 1.5em 0 0 1.5em;
+    padding: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* .LocationBoxLeftDesktop {
+    width: fit-content;
+} */
+
+.LocationBoxRight {
+    /* display: flex; */
+    /* flex-direction: row; */
+    width: 100%;
+    padding: 1em;
+    /* align-items: center; */
+}
+
+.LocationBoxSymbol {
+    float: right;
+    opacity: 0.8;
+}
+
+.LocationBoxSymbol:hover {
+    opacity: .9;
+    font-weight: bold;
+}
+
