--- a/src/LocationDetailBox.css
+++ b/src/LocationDetailBox.css
@@ -1,9 +1,14 @@
 .LocationDetailBox {
     background-color: #748cf1;
-    min-width: 50px;
-    min-height: 50px;
-    height: 50px;
-    padding: 10px;
-    border-radius: 5px;
-    color: whitesmoke
+    width: 230px !important;
+    height: 130px;
+    padding: 20px;
+    padding-left: 25px;
+    border-radius: 20px;
+    color: white;
+    margin: 0px 17px 0px 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
