--- a/src/LocationDetail.css
+++ b/src/LocationDetail.css
@@ -75,13 +75,15 @@
     display: flex;
     flex-direction: row;
     font-weight: 500;
-    margin: 35px 0 32px 0;
+    margin: 0px 0 32px 0;
 }
 
 .LocationDetailTab {
     margin: 0px 16px;
     margin-top: 35px;
     color: #AAAAAA;
+    font-size: 32px;
+    font-weight: 500;
 }
 
 .LocationDetailTab:hover {
@@ -90,6 +92,12 @@
 
 .LocationDetailCurrentTab {
     margin: 0px 16px;
-    color: black;
+    color: #3D3D3D;
     margin-top: 35px;
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.LocationDetailForecast {
+    min-height: 630px;
 }
