--- a/src/Modal.css
+++ b/src/Modal.css
@@ -17,20 +17,19 @@
 
 .Modal {
     background-color: rgb(250, 250, 250);
-    width: 50%;
-    max-width: 600px;
+    width: 576px;
     height: fit-content;
-    max-height: 80%;
     padding: 20px;
-    border-radius: 2rem;
+    border-radius: 7px;
     margin: 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .exit {
-    color: black;
-    font-size: 1.4em;
+    color: #1D1D1DCC;
+    font-size: 1em;
     float: right;
 }
 
