--- a/src/Modal.css
+++ b/src/Modal.css
@@ -18,6 +18,7 @@
 .Modal {
     background-color: rgb(250, 250, 250);
     width: 576px;
+    max-width: 80%;
     height: fit-content;
     padding: 20px;
     border-radius: 7px;
