--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -7,6 +7,7 @@
 
 .SearchBar input {
     width: 340px;
+    max-width: 100%;
     border: none;
     outline: none;
     background-color: #ECECEC;
